--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,18 @@
 	</properties>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>connect-api</artifactId>
 			<version>0.10.2.0</version>
 			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.couchbase.client</groupId>
+			<artifactId>java-client</artifactId>
+			<version>2.1.6</version>
 		</dependency>
 
 		<dependency>
@@ -42,6 +49,8 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
-	
+
+
 </project>
