--- a/config/couchdb-sink.properties
+++ b/config/couchdb-sink.properties
@@ -12,7 +12,7 @@ couchdb.hosts=127.0.0.1, 127.0.0.1
 couchdb.port=5984
 couchdb.user=sanju
 couchdb.password=sanju
-couchdb.database.name=user_comments
+couchdb.bucket.name=user_comments
 couchdb.batch.size=100
 #set to zero for infinite retires
 couchdb.max.retries=10
