--- a/config/couchdb-sink.properties
+++ b/config/couchdb-sink.properties
@@ -1,13 +1,13 @@
 #kafka specific
 name=couchdb-sink
-connector.class=kafka.connect.arangodb.sink.CouchDBSinkConnector
+connector.class=kafka.connect.couchdb.sink.CouchDBSinkConnector
 tasks.max=10
 #topics to consume from [comma separated list for multiple topics]
 topics=comments
 #in case of 
 retry.backoff.ms=1000
 
-#arngodb specific
+#couchdb specific
 couchdb.hosts=127.0.0.1, 127.0.0.1
 couchdb.port=5984
 couchdb.user=sanju
