--- a/config/couchdb-sink.properties
+++ b/config/couchdb-sink.properties
@@ -3,17 +3,17 @@ name=couchdb-sink
 connector.class=kafka.connect.couchdb.sink.CouchDBSinkConnector
 tasks.max=10
 #topics to consume from [comma separated list for multiple topics]
-topics=comments
+topics=trades
 #in case of 
 retry.backoff.ms=1000
 
 #couchdb specific
-couchdb.hosts=127.0.0.1, 127.0.0.1
-couchdb.port=5984
+couchdb.connection.url=http://127.0.0.1:5984
+couchdb.bulk.endpoint=_bulk_docs
 couchdb.user=sanju
 couchdb.password=sanju
-couchdb.bucket.name=user_comments
 couchdb.batch.size=100
+couchdb.database=trades
 #set to zero for infinite retires
 couchdb.max.retries=10
 couchdb.writer.impl=kafka.connect.couchdb.CouchDBWriter
