adding test case

--- a/config/couchdb-sink.properties
+++ b/config/couchdb-sink.properties
@@ -6,6 +6,8 @@ tasks.max=10
 topics=trades
 #in case of 
 retry.backoff.ms=1000
+#set to zero for infinite retires
+max.retries=10
 
 #couchdb specific
 couchdb.connection.url=http://127.0.0.1:5984
@@ -14,6 +16,5 @@ couchdb.user=sanju
 couchdb.password=sanju
 couchdb.batch.size=100
 couchdb.database=trades
-#set to zero for infinite retires
-couchdb.max.retries=10
+
 couchdb.writer.impl=kafka.connect.couchdb.CouchDBWriter
